--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-qwik-empty-starter",
-  "homepage": "https://onebless.github.io/wip-personal-site",
+  "homepage": "https://twpowell.me",
   "description": "Blank project with routing included",
   "engines": {
     "node": "^18.17.0 || ^20.3.0 || >=21.0.0"
