--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "qwik build",
+    "build": "qwik build && npm run fix-worker",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build --outDir dist -c adapters/cloudflare-pages/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "wrangler pages deploy ./dist",
+    "fix-worker": "node -e \"const fs = require('fs'); const content = fs.readFileSync('dist/_worker.js', 'utf8'); fs.writeFileSync('dist/_worker.js', content.replace('\\\"entry.cloudflare-pages\\\"', '\\\".\/entry.cloudflare-pages\\\"'));\"",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
